# chapter-extractor

./: LICENSE  README.md  extract_chapters.py  pg1747-images.html  pyproject.toml
chapter_extractor/: __init__.py  _version.py  cli.py  extractor.py
chapter_extractor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
chapters/: Chapter_01_CHAPTER_1_IN_THE_POLICE_COURT.md  Chapter_02_CHAPTER_2_THE_GAME_OF_CONSEQUENCES.md  Chapter_03_CHAPTER_3_THE_ROOM_WITH_THE_SEVEN_DOORS.md  Chapter_04_CHAPTER_4_BARBARA_ENGAGES_COUNSEL.md  Chapter_05_CHAPTER_5_THE_VANISHING_MAN.md  Chapter_06_CHAPTER_6_STRAIGHT_QUESTIONS_AND_CROOKED_ANSWERS.md  Chapter_07_CHAPTER_7_THE_RED_SEAL.md  Chapter_08_CHAPTER_8_THE_INQUEST.md  Chapter_09_CHAPTER_9_B_B_B.md  Chapter_10_CHAPTER_10_AT_THE_CLUB_DE_VINGT.md  Chapter_11_CHAPTER_11_HALF_A_TRUTH.md  Chapter_12_CHAPTER_12_THE_ECHO_OF_A_LAUGH.md  Chapter_13_CHAPTER_13_THE_FACE_AT_THE_WINDOW.md  Chapter_14_CHAPTER_14_PAY_CASH.md  Chapter_15_CHAPTER_15_WHEN_THE_LIGHT_FAILED.md  Chapter_16_CHAPTER_16_THE_CRIMSON_OUTLINE.md  Chapter_17_CHAPTER_17_A_QUESTION_OF_HOUSE_BREAKING.md  Chapter_18_CHAPTER_18_THE_FATAL_PERIOD.md  Chapter_19_CHAPTER_19_THE_RED_SEAL_AGAIN.md  Chapter_20_CHAPTER_20_THE_UNKNOWN_EQUATION.md  Chapter_21_CHAPTER_21_THE_RIDDLE_ANSWERED.md
tests/: conftest.py  test_extractor.py
